# flashcards-again

./: .dockerignore  .env.example  .gitignore  .prettierignore  Dockerfile  README.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
phoneme-server/: Dockerfile  README.md  pyproject.toml
phoneme-server/app/: audio.py  g2p.py  gop.py  main.py  tts.py
phoneme-server/app/backends/: __init__.py  base.py  phoneticxeus.py  wav2vec2phoneme.py
phoneme-server/tests/: test_gop.py
scripts/: migrate.ts
src/: app.css  app.d.ts  app.html  hooks.server.ts
src/lib/: database.types.ts
src/lib/cards/: clozeMarkers.ts  generator.ts  kindDetector.ts  tokenizer.ts  types.ts  visibility.ts
src/lib/components/: AudioRecorder.svelte  CardSurface.svelte  CardView.svelte  ExtraBadge.svelte  ExtraField.svelte  ExtrasEditor.svelte  FilterBar.svelte  ManualReveal.svelte  PronunciationFeedback.svelte  RatingButtons.svelte
src/lib/components/cards/: AudioRecognitionView.svelte  BasicCardView.svelte  (+2 more)
src/lib/server/: cardSync.ts  distractors.ts  env.ts  exampleSentences.ts  fsrs.ts  ipa.ts  openai.ts  pronunciation.ts  queue.ts  soloAuth.ts  suggest.ts  supabase.ts  tts.ts
src/routes/: +layout.svelte  +page.server.ts  +page.svelte
src/routes/cards/: +page.server.ts  +page.svelte
src/routes/settings/: +page.server.ts  +page.svelte
src/routes/suggestions/: +page.server.ts  +page.svelte
supabase/: README.md
supabase/migrations/: 0001_init.sql  0002_rls.sql  0003_storage.sql
tests/: cardGenerator.test.ts  fsrs.test.ts
(+10 files in other folders)
